# RShell_V2

./: CMakeLists.txt  README.md  main.cpp  rshell_uml.plantuml
src/: rshell.cpp  rshell.h
src/build_tree/: base.h  command.h  connect.h  redirect.h
src/control_ops/: and.h  or.h  semicolon.h
src/file_ops/: doubleout.h  in.h  out.h  piping.h
